vlib/v/checker/tests/overflow_int_err.vv
fn main() {
	a := -2147483648
	b := 2147483647
	c := -2147483649
	d := 2147483648
	println(a)
	println(b)
	println(c)
	println(d)
}
